Fixed overflow of the message area Back works even if the connection failed Now cannot send empty messages Messages are now sent on pressing enter

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
+html {
+	height: 100%;
+}
 body {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	min-height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
